--- a/Installer/Pathway.wxs
+++ b/Installer/Pathway.wxs
@@ -2,8 +2,8 @@
 <?define Product="Pathway"?>
 <?define UpgradeCode="74173B43-8B0C-499e-99B0-759A6C8EBDD2"?>
 <?define Edition="BTE"?>
-<?define BUILD_NUMBER="1.15.7"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<?define BUILD_NUMBER="1.15.5"?>
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
   <Product Id="*" Name="$(var.Product) $(var.Edition) $(var.BUILD_NUMBER)" Language="1033" Version="$(var.BUILD_NUMBER)" Manufacturer="SIL International" UpgradeCode="$(var.UpgradeCode)">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
     <Upgrade Id="$(var.UpgradeCode)">
@@ -16,10 +16,8 @@
 		rest of the app the first time the icon is run.  If this is not behavior you
 		are trying to support, you're better off using non-advertised shortcuts. "
 		-->
-    <PropertyRef Id="NETFRAMEWORK40FULL" />
-    <Condition Message="Before Pathway can install, you need to install Microsoft's free .NET Framework 4.0.">
-			Installed OR NETFRAMEWORK40FULL
-		</Condition>
+    <PropertyRef Id="NETFRAMEWORK45" />
+    <Condition Message="Pathway requires .NET Framework 4.6.1 or later.  You need to install Microsoft's free .NET Framework then run this installer again."><![CDATA[Installed OR (NETFRAMEWORK45 >= "#394254")]]></Condition>
     <Media Id="1" Cabinet="pathway.cab" EmbedCab="yes" CompressionLevel="high" />
     <Property Id="DISABLEADVTSHORTCUTS" Value="1" />
     <Feature Id="ProgramFiles" Level="1" Absent="disallow" Title="Program Files">
