TD-4801 Fixed the introduction paragraphs in Scripture

--- a/DistFiles/Styles/Scripture/Scripture.css
+++ b/DistFiles/Styles/Scripture/Scripture.css
@@ -347,7 +347,7 @@ page-break-before: always;
 string-set: chapter '1';
 }
 
-.intropara {
+.Intro_Paras {
     text-indent: 20pt;
 }
 /* End Scripture.css */
