--- a/src/Test/CssSimpler/TestFiles/Expected/Override.css
+++ b/src/Test/CssSimpler/TestFiles/Expected/Override.css
@@ -5,6 +5,16 @@ a {
    text-decoration: inherit;
    color: inherit;
 }
+[dir= 'ltr']{
+   unicode-bidi: isolate;
+   unicode-bidi: -ms-isolate;
+   unicode-bidi: -moz-isolate;
+}
+[dir= 'rtl']{
+   unicode-bidi: isolate;
+   unicode-bidi: -ms-isolate;
+   unicode-bidi: -moz-isolate;
+}
 .definitionorgloss {
    /* Rule List: 4,-1,18,3 */
    font-family: 'Times New Roman',serif;
@@ -22,17 +32,17 @@ a {
    white-space: pre-wrap;
 }
 .headword {
-   /* Rule List: 15,-1,8,38,41,18,3 */
+   /* Rule List: 15,-1,38,8,41,18,3 */
+   font-weight: bold;
    font-family: 'Gautami',serif;
    font-size: 10pt;
-   font-weight: bold;
    white-space: pre-wrap;
 }
 .headword2 {
-   /* Rule List: 15,-1,4,38,8,41,18,3 */
+   /* Rule List: 15,-1,34,4,38,8,41,18,3 */
+   font-weight: bold;
    font-family: 'Times New Roman',serif;
    font-size: 10pt;
-   font-weight: bold;
    white-space: pre-wrap;
 }
 .letData {
@@ -61,10 +71,10 @@ a {
    text-align: center;
 }
 .mlpartofspeech {
-   /* Rule List: 4,-1,144,18,3 */
+   /* Rule List: 138,4,-1,144,18,3 */
+   font-style: italic;
    font-family: 'Times New Roman',serif;
    font-size: 10pt;
-   font-style: italic;
    white-space: pre-wrap;
 }
 .pronunciations {
