Update for picture, audio, and video output.
TD-4857, TD-4854, TD-4848, TD-4852, TD3962, TD-4859, TD-4855, TD-4856
TOC only appears once
Audio and video content work from epub
No validation errors reported with audio and video in epub
Missing pictures eliminated from Libre Office
Adjust folder to Student Manual
Add Reversal headword to running header
Audio files will play from PDF
if they are put in the same location when exported
The user will need to specify a path for the working folder.

--- a/DistFiles/Styles/Dictionary/Dictionary.css
+++ b/DistFiles/Styles/Dictionary/Dictionary.css
@@ -288,6 +288,11 @@ text-align: justify;
     text-align: center;
 }
 
+.reversalform,.reversalformr1 {
+	font-weight: bold;
+	string-set: guideword content();
+}
+
 .mainheadword {
 	font-weight: bold;
 	string-set: guideword content();
