Add bookmarks to letter headers
Also don't end page with letter header

--- a/DistFiles/Styles/Dictionary/Dictionary.css
+++ b/DistFiles/Styles/Dictionary/Dictionary.css
@@ -86,6 +86,11 @@
         /* padding-bottom: 36pt; */
         /* padding-top: 36pt; */
         text-align: center;
+		page-break-after:avoid;
+		page-break-inside:avoid;
+		orphans:5;
+		widows:5;
+        -ps-outline-level:2;
 }
 .letter {
         direction: ltr;
