TD-4868 handle eliminated pictures
Add test for new flex -moz in value

--- a/src/Test/PsTool/TestFiles/Expected/MergedCss.css
+++ b/src/Test/PsTool/TestFiles/Expected/MergedCss.css
@@ -447,5 +447,8 @@
 .xsensenumber { }
 
 /* File Name: Merge_KeyFile.css */
-
+*[dir= 'ltr']{
+   unicode-bidi: isolate;
+   unicode-bidi: -ms-isolate;
+}
 
