--- a/DistFiles/Styles/Scripture/Running_Head_Mirrored_MultiChapter.css
+++ b/DistFiles/Styles/Scripture/Running_Head_Mirrored_MultiChapter.css
@@ -13,7 +13,7 @@
     }
     @top-center  { content: ''; }
     @top-right     { content: ''; }
-    @bottom-left   { content: counter( page); }
+    @bottom-left   { content: ''; }
     @bottom-center { content: ''; }
     @bottom-right  { content: ''; }
 }
