TD-4867 Verse 1 is removed even if check box is not checked
Verse 1 gets hidden correctly.
On displaying, Verse Number 1 style displayed same as Verse Number.
On hiding, spaces removed in place of the Verse Number 1.

--- a/src/Test/ParatextSupport/TestFiles/Expected/Introduction.css
+++ b/src/Test/ParatextSupport/TestFiles/Expected/Introduction.css
@@ -391,6 +391,12 @@ font-size: 12pt;
 vertical-align: super;
 }
 
+.Verse_Number1
+{
+font-size: 12pt;
+vertical-align: super;
+}
+
 .va
 {
 font-size: 12pt;
